0027565: [Regression to OCCT 7.0.0] Number of Intersections Is Wrong

Incorrect tolerance management is fixed.
Test case is added.